# argus

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  entities.yaml  repository.yaml
.github/workflows/: build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
argus/: DOCS.md  Dockerfile  config.yaml
argus/translations/: en.yaml  pl.yaml
deploy/: .env.example  CERTS.md  Dockerfile.detector  Dockerfile.orchestrator  build-push.ps1  docker-compose.dev.yml  docker-compose.edge.yml  docker-compose.gpu.yml  generate-certs.sh  image-facts.sh  mosquitto.dev.conf
deploy/certs/: server-ext.cnf
detector/: pyproject.toml  requirements.txt
detector/argus_detector/: config.py  hst_detector.py  logging_setup.py  model_store.py  normalizer.py  pyod_detector.py  registry.py  server.py  servicer.py  stl_detector.py
detector/argus_detector/proto/: __init__.py
detector/scripts/: gen_proto.py
detector/tests/: test_health.py  test_hst_detector.py  test_local_mode.py  test_model_store.py  test_proto_codegen.py  test_pyod_detector.py  test_registry.py  test_restart_resilience.py  test_score_zero_wire.py  test_server_boot.py  test_servicer.py  test_stl_detector.py  test_wait_detector.py
orchestrator/: Argus.Orchestrator.sln  Argus.Orchestrator.slnx
proto/: argus.proto  buf.yaml
tests/: test_config_schema.py  test_gen_entities.py
(+225 files in other folders)
