[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "argus-detector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.81.0",
    "grpcio-tools==1.81.0",
    "grpcio-health-checking==1.81.0",
    "river==0.25.0",
    "pyod==3.6.0",
    "joblib==1.5.3",
    "numpy",
    "pandas",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["argus_detector*"]

[tool.pytest.ini_options]
# "." = the detector/ directory itself, so argus_detector package is importable
pythonpath = ["."]
testpaths = ["tests"]
